@@ -3,6 +3,8 @@ freebsd-utils (10.0-2) UNRELEASED; urgency=low
   * Handle USB keyboard attach/detach events.
   * Remove Build-Conflicts on libc0.1-dev-i386 (not needed anymore since
     kdump is now using headers from kfreebsd-headers-10.0-1).
+  * Remove kludge that allowed auto-detected macros to be missing when
+    building kdump. (Closes: #736202)
 
  -- Robert Millan <rmh@debian.org>  Tue, 21 Jan 2014 12:38:27 +0100
 
